add new endpoint to fetch organization
